--- a/Chokladbollar.html
+++ b/Chokladbollar.html
@@ -55,14 +55,14 @@ public class Chokladbollar
 		
 		while(!IsRoomTemperature(smör)) 
 		{
-			Thread.Sleep(60000);
+			Thread.Sleep(1000*60);
 		}
 		
 		Brygg(kaffe);
 		
 		while(!IsCool(kaffe)) 
 		{
-			Thread.Sleep(60000);
+			Thread.Sleep(1000*60);
 		}
 	}
 	
