--- a/Chokladbollar.html
+++ b/Chokladbollar.html
@@ -3,8 +3,8 @@
 <head>
 <title>Chokladbollar</title>
 <meta charset="UTF-8">
-<script src="prism.js" type="text/javascript"></script>
-<link rel="stylesheet" href="prism.css" />
+<script src="..\lib\prism.js" type="text/javascript"></script>
+<link rel="stylesheet" href="..\lib\prism.css" />
 </head>
 <body>
 <pre><code class="language-csharp">
